--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,29 @@
+@font-face {
+  font-family: "OpenSans Regular";
+  src: url("./fonts/OpenSans-Regular.ttf");
+}
+
+@font-face {
+  font-family: "OpenSans Bold";
+  src: url("./fonts/OpenSans-Bold.ttf");
+}
+
 body,
 html {
-  margin: 0 auto;
+  margin: 0;
   height: 100%;
+  background-color: #07C7A4;
 }
 
 .wrapper {
   width: 600px;
   height: 100%;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "OpenSans Regular", sans-serif;
 }
 
 .todo_block {
   height: 100%;
   display: flex;
-  background-color: #07C7A4;
   justify-content: center;
 }
 
@@ -32,8 +42,8 @@ html {
 }
 
 h1 {
+  font-family: "OpenSans Bold", sans-serif;
   text-align: center;
-  font-weight: 600;
   color: #1a7967;
 }
 
@@ -53,6 +63,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-left: 20px;
   & .mark_completed {
     & p {
       color: #205b26;
@@ -72,6 +83,7 @@ p {
 .delete_completed {
   display: flex;
   flex-direction: row-reverse;
+  align-items: center;
 }
 
 .tasks_container {
@@ -80,6 +92,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  border-top: 1px solid #07C7A4;
 }
 
 .task {
@@ -112,4 +125,64 @@ p {
   border: none;
   color: aliceblue;
   font-family: 'Open Sans', sans-serif;
+}
+
+
+.popup_container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backdrop-filter: blur(1px);
+  justify-content: center;
+  align-items: center;
+}
+
+.popup {
+  width: 400px;
+  height: 200px;
+  background-color: #FFF;
+  border-radius: 10px;
+  padding: 10px 20px;
+}
+
+.create_task {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.title_popup {
+  color: #07C7A4;
+  font-size: 25px;
+  margin: 0;
+}
+
+.create-task {
+  background-color: #F2F2F2;
+  border: 1px solid #07C7A4;
+  width: 400px;
+  height: 30px;
+  border-radius: 7px 0 0 7px;
+  padding: 1px 10px;
+}
+
+.create-task {
+  outline-color: #07C7A4;
+}
+
+.button-popup_create-task {
+  width: 120px;
+  height: 34px;
+  background-color: #07C7A4;
+  border: 1px solid #07C7A4;
+  color: #FFFFFF;
+  border-radius: 7px;
+  position: relative;
+  right: 10px;
+}
+
+.cancel {
+  color: #07C7A4;
+  display: inline-block;
 }
