--- a/src/App.scss
+++ b/src/App.scss
@@ -64,17 +64,43 @@ p {
   flex-direction: column;
   align-items: flex-start;
   margin-left: 20px;
-  & .mark_completed {
-    & p {
-      color: #205b26;
+  .mark_completed {
+    border-radius: 5px;
+
+    p {
+      color: #273d29;
       margin-left: 15px;
+
+      &:hover {
+        content: '';
+        color: #179b22;
+      }
+    }
+
+    &:hover {
+      content: '';
+      background-color: rgba(194, 232, 198, 0.54);
+      cursor: pointer;
     }
   }
-  & .delete_completed {
+  .delete_completed {
     margin-top: 20px;
-    & p {
+    border-radius: 5px;
+
+    p {
       color: #6d0608;
       margin-left: 15px;
+
+      &:hover {
+        content: '';
+        color: #d70002;
+      }
+    }
+
+    &:hover {
+      content: '';
+      background-color: rgba(232, 194, 194, 0.54);
+      cursor: pointer;
     }
   }
 }
@@ -116,6 +142,14 @@ p {
   margin-left: 15px;
 }
 
+.delete,
+.change {
+  &:hover {
+    content: '';
+    cursor: pointer;
+  }
+}
+
 .button_create-task {
   width: 196px;
   height: 53px;
@@ -125,6 +159,13 @@ p {
   border: none;
   color: aliceblue;
   font-family: 'Open Sans', sans-serif;
+
+  &:hover {
+    content: '';
+    cursor: pointer;
+    background-color: #14a47b;
+    transition: 0.5s;
+  }
 }
 
 
@@ -180,9 +221,23 @@ p {
   border-radius: 7px;
   position: relative;
   right: 10px;
+
+  &:hover {
+    content: '';
+    cursor: pointer;
+    background-color: #09ab8e;
+    transition: 0.5s;
+  }
 }
 
 .cancel {
   color: #07C7A4;
   display: inline-block;
+
+  &:hover {
+    content: '';
+    cursor: pointer;
+    color: #c70707;
+    transition: 0.5s;
+  }
 }
